--- a/cities.html
+++ b/cities.html
@@ -28,6 +28,7 @@
     <li>Mumbai   (12,478,447)</li>
     <li>Seoul    (9,777,000)</li>
     <li>Paris    (2,161,000)</li>
+    <li>Tokyo    (13,970,000</li>
   </ol>
 
 </body>
