add Mordor to list

--- a/cities.html
+++ b/cities.html
@@ -31,6 +31,7 @@
     <li>Seattle  (724,305)</li>
     <li>Paris    (2,161,000)</li>
     <li>Tokyo    (13,970,000</li>
+    <li>Mordor   (50,000,000)</li>
   </ol>
 
 </body>
