And Rohan will answer

--- a/cities.html
+++ b/cities.html
@@ -31,7 +31,8 @@
     <li>Seattle  (724,305)</li>
     <li>Paris    (2,161,000)</li>
     <li>Tokyo    (13,970,000)</li>
-    <li>Tokyo    (8,982,000)</li>
+    <li>London    (8,982,000)</li>
+    <li>Rohan    (5,000,000)</li>
   </ol>
 
 </body>
